Add a species list and details
